@@ -1,3 +1,5 @@
+* Add unique private `expando` property. [jddalton]
+
 * Fix regression bug in the Object._each() Safari 2 fork. [jddalton]
 
 * Ensure Object.isHash() returns false for Hash.prototype. [jddalton]
